# ai-portfolio

./: .gitignore  README.md
data-science-challenge/: README.md  Rodrigo-Gonzalez_Data-science-challenge.ipynb  baby_potato.py  requirements.txt
data-science-challenge/data/: mes_extract.csv
metal_nut/: README.md
metal_nut/code/python/: metal_nut_yolov5_train.py  metal_nut_yolov5_validation.py
metal_nut/data/: hyp.yaml  metal_nut.yaml
metal_nut/data/metal_nut_org/: 02b16b7d-009.txt  038fd297-007.txt  04aa98a0-001.txt  06ba0751-019.txt  09872307-017.txt  0b213910-008.txt  0c3747ae-022.txt  11e88686-021.txt  147b15d1-012.txt  15ee36c6-007.txt  17bd236d-004.txt  (+92 more)
panini/: README.md  README_test.md  panini.Rmd  panini.html  panini_es.Rmd  panini_es.html
panini-app/: Dockerfile  README.md  app.R
panini-app/R/: panini.R
panini-app/data/: translation.json
panini/data/: packs_needed.Rda  packs_needed_l.Rda  packs_needed_n.Rda  packs_needed_rs.Rda
panini/functions/: panini.R
r-shiny-biodiversity/: README.md
r-shiny-biodiversity/data/: README.md
r-shiny-biodiversity/rawdata/: README.md
r-shiny-genes/: README.md
r-shiny-genes/app/: app.R
r-shiny-panini-app/: README.md
r-shiny-panini-app/data/: packs_needed.Rda
renting-chatbot/: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt
renting-chatbot/src/renting_chatbot/: agents.py  app.py  configuration.py  graph.py  prompts.py  schemas.py  state.py  tools.py  utils.py
renting-chatbot/tests/: test_graph.py  user_messages.txt
uncu-ingreso/: README.md
uncuyo-ingreso/: README.md
(+8 files in other folders)
